--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+# ******************************************************************************************************
+# service port
+# ******************************************************************************************************
+server.port=8086
+
+# ******************************************************************************************************
+# Log property
+# ******************************************************************************************************
+# Log level #INFO, WARN, DEBUG, ERROR, TRACE
+logging.level.root=info
+logging.file.path=logs
+logging.level.org.springframework.web=debug
+logging.level.org.apache.http=debug
+logging.level.httpclient.wire=debug
+logging.logback.rollingpolicy.max-file-size=1MB
+logging.logback.rollingpolicy.total-size-cap=2MB
+spring.output.ansi.enabled=ALWAYS
+
+# ******************************************************************************************************
+# Properties of service
+# ******************************************************************************************************
 spring.application.name=materialase-demo
+# Name application, description, version..
+info.application.name=${spring.application.name}
+info.application.description=Service Designed by A.S.Lyapustin 08.03.2024
+info.application.version=0.0.10
+
+info.app.name=@project.artifactId@
+info.app.version=@project.version@
+
+
