--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 HELP.md
 target/
+transform/
+log/
+logs/
+temp/
+tmp/
+.idea/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -12,6 +18,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.gitignore
 
 ### IntelliJ IDEA ###
 .idea
